99-App/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv-service
  labels:
    app: nginx-srv
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nginx-srv
