99-App/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-srv-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ing.onmyowncorp.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-srv-service
          servicePort: 80
